# A-BTester

./: README.md
ab-test-pipeline/: Makefile
ab-test-pipeline 2/: README.md  conftest.py  pyproject.toml
ab-test-pipeline 2/docs/: PRD.md
ab-test-pipeline 2/src/ab_test_pipeline/: cli.py  dataset.py  metrics.py  pipeline.py  report.py  stats.py  variant_runner.py
ab-test-pipeline 2/tests/: test_cache.py  test_dataset.py  test_stats.py  test_variant_runner.py
ab-test-pipeline/data/: examples.jsonl  variant_a_outputs.jsonl  variant_b_outputs.jsonl
ab-test-pipeline/src/ab_test_pipeline/: __init__.py  cache.py  cli.py  lookup_variant.py  report.py
ab-test-pipeline/tests/: test_metrics.py  test_pipeline.py
